# maxent-learner

./: .gitignore  ConstraintLearner.hs  MaxentGrammar.hs  PhonotacticGrammar.hs  Probability.hs  README.md  Ring.hs  TestingMain.hs  TestingVars.hs  WeightOptimizer.hs  WeightedDFA.hs  features-fiero.csv  maxent-learner-hw.cabal  shortdfa.c  shortdfa.h  stack.yaml
app/: Main.hs  ft-ipa.csv
bundle/: Icon.icns  learner.bundle
ffisrc/: packeddfa.c
maxent-learner-hw/: maxent-learner-hw.cabal
maxent-learner-hw-gui/: maxent-learner-hw-gui.cabal
maxent-learner-hw-gui/app/: FeatureTableEditor.hs  GrammarEditor.hs  GtkUtils.hs  LearnerControls.hs  LexiconEditor.hs  Main.hs  ft-ipa.csv
maxent-learner-hw/app/: Main.hs
maxent-learner-hw/src/Text/: PhonotacticLearner.hs
maxent-learner-hw/src/Text/PhonotacticLearner/: DFST.hs  MaxentGrammar.hs  PhonotacticConstraints.hs
maxent-learner-hw/src/Text/PhonotacticLearner/PhonotacticConstraints/: FileFormats.hs  Generators.hs
maxent-learner-hw/src/Text/PhonotacticLearner/Util/: Probability.hs  Ring.hs
osx-bundle/: Info-learner.plist
src/: ConstraintLearner.hs  MaxentGrammar.hs  PhonotacticGrammar.hs  Probability.hs  Ring.hs  WeightOptimizer.hs  WeightedDFA.hs
src/Linguistics/: PhonotacticLearner.hs
src/Linguistics/PhonotacticLearner/: DFST.hs  MaxentGrammar.hs  PhonotacticConstraints.hs  UniversalGrammar.hs  WeightOptimizer.hs  WeightedDFA.hs
src/Linguistics/PhonotacticLearner/PhonotacticConstraints/: Generators.hs
src/Linguistics/PhonotacticLearner/UniversalGrammar/: Generators.hs
src/Linguistics/PhonotacticLearner/Util/: ConjugateGradient.hs  Probability.hs  Ring.hs
src/Text/: PhonotacticLearner.hs
src/Text/PhonotacticLearner/Util/: ConjugateGradient.hs  Probability.hs  Ring.hs
test/: Test.hs
testcases/: EnglishLearningData.txt  features-onsets.csv
