name:                maxent-learner-hw
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
-- homepage:            https://github.com/githubuser/maxent-learner-hw#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              George Steel
maintainer:          george.steel@gmail.com
-- copyright:           2016 Author name here
-- category:            Web
build-type:          Simple
extra-source-files:  README.md, ffisrc/packeddfa.c
cabal-version:       >=1.10

library
  cc-options: -Wall -O3 -g -std=c11
  hs-source-dirs:      src
  exposed-modules:     Ring, Probability, WeightedDFA, MaxentGrammar, WeightOptimizer, ConstraintLearner, PhonotacticGrammar
  build-depends:       base >= 4.7 && < 5, deepseq, vector, mtl, containers, random, array, text, csv
  default-language:    Haskell2010
  c-sources:           ffisrc/packeddfa.c

executable maxent-learner-hw-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , maxent-learner-hw
  default-language:    Haskell2010

test-suite maxent-learner-hw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , maxent-learner-hw, containers, text, parallel, deepseq, file-embed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/maxent-learner-hw
