name:                maxent-learner-hw
version:             0.1
synopsis:            Implementation of Hayes and Wilson's maxent learning algorithm for phonotactic constraint grammars.
description:         Provides an implementation of Hayes and Wilson's machine learning algorithm for maxent phonotactic grammars, as both a copmmand-line tool and a function library.  The learner takes in a lexicon and produces a list of weighted constraints prnalizing certain sound sequemces in an attempt to produce a probability distribution of words which maximized the probability of the lexicon. Once such a set of constraints is generates, it can be tested by using it to generate random pronounceable text.

                     This package is an implementation of the algorithm described in Hayes and Wilson's paper /A Maximum Entropy Model of Phonotactics and Phonotactic Learning/ (available at <http://www.linguistics.ucla.edu/people/hayes/Phonotactics/Index.htm>).
homepage:            https://github.com/george-steel/maxent-learner
license:             GPL
license-file:        LICENSE
author:              George Steel
maintainer:          george.steel@gmail.com
copyright:           2016 George Steel and Peter Jurgec
category:            Linguistics
build-type:          Simple
extra-source-files:  README.md, ffisrc/packeddfa.c
cabal-version:       >=1.10

library
  cc-options: -Wall -std=c11
  hs-source-dirs:      src
  exposed-modules:     Linguistics.PhonotacticLearner.Util.Ring
                     , Linguistics.PhonotacticLearner.Util.Probability
                     , Linguistics.PhonotacticLearner.WeightedDFA
                     , Linguistics.PhonotacticLearner.MaxentGrammar
                     , Linguistics.PhonotacticLearner.WeightOptimizer
                     , Linguistics.PhonotacticLearner.UniversalGrammar
                     , Linguistics.PhonotacticLearner
  build-depends:       base >= 4.7 && < 5
                     , deepseq
                     , vector
                     , mtl
                     , containers
                     , random
                     , array
                     , text
                     , csv
  default-language:    Haskell2010
  c-sources:           ffisrc/packeddfa.c

executable hw-learner
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , maxent-learner-hw
                     , optparse-applicative
                     , containers
                     , text
                     , file-embed
                     , parallel
                     , deepseq
                     , array
                     , mtl
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/maxent-learner-hw
