name:                maxent-learner-hw-gui
version:             0.2.0
synopsis:            GUI for maxent-learner-hw
description:         GUI for maxent-learner-hw
homepage:            https://github.com/george-steel/maxent-learner
license:             GPL
license-file:        LICENSE
author:              George Steel
maintainer:          george.steel@gmail.com
copyright:           2016-2017 George Steel and Peter Jurgec
category:            Linguistics
build-type:          Simple
extra-source-files:  app/ft-ipa.csv
cabal-version:       >=1.10

executable phono-learner-hw-gui
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , maxent-learner-hw == 0.2.0
                     , containers == 0.5.*
                     , text == 1.2.*
                     , file-embed
                     , parallel == 3.2.*
                     , deepseq == 1.4.*
                     , array >= 0.3 && < 0.6
                     , mtl >= 2.1 && < 2.3
                     , transformers
                     , random == 1.1
                     , gtk3
                     , glib
                     , frpnow
                     , frpnow-gtk3
                     , raw-strings-qq
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/maxent-learner
